--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 <body>
         <header class="header">
             <div class="header-left">
-               <a class="header-link" href="./main.html">Адвокатське бюро "РУБІКОН"</a> 
+               <a class="header-link" href="./main.html">Адвокатське бюро Бондарця Дениса «РУБІКОН»</a> 
             </div>
             <div class="header-right">
                 <ul>
@@ -169,8 +169,8 @@
             <div class="contact">
                 <h3 class="header-contact-list">Контактна інформація</h3>
                 <ul class="contacts-list">
-                <li>Телефон: <a href="+380955659399">+380955659399</a></li>
-                <li>Email: <a href="mailto:your_email@example.com">den@gmail.com</a></li>
+                <li class="info-tel-em">Телефон: <a href="+380955659399">+380955659399</a></li>
+                <li class="info-tel-em">Email: <a href="mailto:your_email@example.com">den@gmail.com</a></li>
             </ul>
             </div>
         </div>
